[package]
name = "continuator"
version = "0.1.0"
edition = "2024"
authors = ["Amar Sood <pkg@tekacs.com>"]
description = "Generate and stitch AI video clips using OpenAI Sora and Google Veo."
license = "MIT"
repository = "https://github.com/tekacs/continuator"
homepage = "https://github.com/tekacs/continuator"
documentation = "https://github.com/tekacs/continuator#readme"
readme = "README.md"
keywords = ["video", "cli", "ai", "sora", "veo"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
base64 = "0.22"
